--- a/index.html
+++ b/index.html
@@ -5,9 +5,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="./scrip.js" defer> </script>
 </head>
 
+
 <body>
+    <div class="wrapper">
+        <div class="menu">
+            <h1 class="menu_title">
+                Мои Заметки
+            </h1>
+            <button class="menu_button" id="knopka">
+                Новая заметка
+            </button>
+            <h2 class="tegs">Теги</h2>
+            <div id="menu_list"></div>
+            <!-- <div class="tegs_li">Все</div>
+            <div class="tegs_li">Идеи</div>
+            <div class="tegs_li">Личное</div>
+            <div class="tegs_li">Работа</div>
+            <div class="tegs_li">Список покупок</div> -->
+
+        </div>
+
+        <div class="content">
+            <div class="search">
+                <input type="text" id="searchInput" class="forma_input" placeholder="поиск">
+                <button class="forma_button" id="searchBtn">
+
+                </button>
+
+
+
+            </div>
+            <div class="otchutttt" id="otchut">
+
+                <div class="otchutttt__item">
+                    <div class="otchut_1"><b>Сдать отчет</b></div>
+                    <div class="data">19.02</div>
+                    <div class="rabota">Работа</div>
+                </div>
+
+                <div class="otchutttt__item">
+                    <div class="otchut_1"><b>Сдать отчет</b></div>
+                    <div class="data">19.02</div>
+                    <div class="rabota">Работа</div>
+                </div>
+            </div>
+
+            <!-- <div class="otchut">Сдать отчет</div>
+            <div class="otchut">Сдать отчет</div>
+            <div class="otchut">Сдать отчет</div>
+            <div class="otchut">Сдать отчет</div>
+            <div class="otchut">Сдать отчет</div>
+            <div class="otchut">Сдать отчет</div>
+            <div class="otchut">Сдать отчет</div>
+            <div class="otchut">Сдать отчет</div>
+            <div class="otchut">Сдать отчет</div>
+            <div class="otchut">Сдать отчет</div> -->
+
+
+        </div>
+    </div>
 
 </body>
 
